import { Component } from '@angular/core';

/**
 * Presentation component for the application footer.
 *
 * @remarks
 * This component renders the footer section of the application layout,
 * typically containing copyright information, attribution, or other
 * metadata about the application. It is a stateless presentational
 * component with no user interactions or dependencies.
 *
 * @example
 * ```html
 * <app-footer></app-footer>
 * ```
 */
@Component({
  selector: 'app-footer',
  imports: [],
  templateUrl: './footer.html',
  styleUrl: './footer.css',
})
export class Footer {}
